@@ -18,7 +18,7 @@ import java.math.BigInteger;
  * TryVarOrder
  * 
  * @author jwhaley
- * @version $Id: TryVarOrder.java,v 1.1 2004/10/16 02:58:57 joewhaley Exp $
+ * @version $Id: TryVarOrder.java,v 1.2 2004/10/19 04:34:48 joewhaley Exp $
  */
 public class TryVarOrder {
 
@@ -88,7 +88,7 @@ public class TryVarOrder {
         Class c = bdd.getClass();
         try {
             Method m = c.getMethod("setError", new Class[] { int.class });
-            m.invoke(bdd, new Object[] { Integer.valueOf(code) });
+            m.invoke(bdd, new Object[] { new Integer(code) });
         } catch (Exception x) {
             System.err.println("Exception occurred while setting error for BDD factory: "+x.getLocalizedMessage());
             x.printStackTrace();
